<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MainActivity">

    <item
        android:id="@+id/action_change_country"
        android:title="@string/menu_change_country"
        android:orderInCategory="101"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_proversion"
        android:title="@string/pro_version"
        android:orderInCategory="102"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_estimate"
        android:title="@string/menu_estimate"
        android:orderInCategory="103"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_exit"
        android:title="@string/menu_exit"
        android:orderInCategory="104"
        app:showAsAction="never" />
</menu>
