<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    android:id="@+id/main_container"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/action_bar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingTop="12dp"
                android:paddingBottom="4dp"
                android:textColor="@color/colorTextMain"
                android:textSize="20sp"
                android:text="@string/official_rates"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <TextView
                android:id="@+id/official_rates_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textSize="12sp"
                android:textColor="@color/colorText"/>

        </LinearLayout>

        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:textColorHint="@color/colorText">

                <EditText
                    android:id="@+id/nbu_rates_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="8dp"
                    android:textColor="@color/colorText"
                    android:hint="@string/input_count"
                    android:textColorHint="@color/colorText"
                    android:gravity="right"
                    android:textSize="16sp"
                    android:maxLength="6"
                    android:inputType="numberDecimal" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:textColorHint="@color/colorText">

                <EditText
                    android:id="@+id/nbu_rates_find"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="8dp"
                    android:textColor="@color/colorText"
                    android:textStyle="bold"
                    android:hint="@string/currency_find"
                    android:textColorHint="@color/colorText"
                    android:gravity="right"
                    android:textSize="16sp"
                    android:maxLength="10" />

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/nbu_find_icon"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginTop="6dp"
                tools:src="@drawable/icon_find" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_nbu_rates"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white" />

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>