<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/main_container"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/action_bar" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.baoyz.widget.PullRefreshLayout
                android:id="@+id/swipeRefreshLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:refreshColors="@array/scheme_colors">

                <android.support.v4.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="12dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/official_text"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/colorTextMain"
                                    android:textSize="20sp"
                                    android:text="@string/official_rates" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:paddingTop="8dp">

                                    <TextView
                                        android:id="@+id/official_rate"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textColor="@color/colorTextMain"
                                        android:textSize="16sp"
                                        tools:text="26.019960" />

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:orientation="vertical"
                                        android:layout_marginLeft="12dp">

                                        <ImageView
                                            android:id="@+id/official_changes_img_up"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_marginBottom="2dp"
                                            android:visibility="gone"
                                            tools:visibility="visible"
                                            app:srcCompat="@drawable/icon_arrow_up"/>

                                        <TextView
                                            android:id="@+id/official_changes_text"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:textColor="@color/colorText"
                                            android:textSize="8sp"
                                            tools:text="+0.1748" />

                                        <ImageView
                                            android:id="@+id/official_changes_img_down"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_marginTop="2dp"
                                            android:visibility="gone"
                                            app:srcCompat="@drawable/icon_arrow_down"/>

                                    </LinearLayout>

                                </LinearLayout>


                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="right"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/official_date"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/colorText"
                                    android:textSize="12sp"
                                    tools:text="14.03.16 15:06"/>

                            </LinearLayout>

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:background="@drawable/line_white"
                            android:layout_height="25dp" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/currency_exchange_point"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:textColor="@color/colorTextMain"
                                android:textSize="20sp"
                                android:text="@string/currency_point" />


                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:background="@color/white"
                                android:padding="8dp">

                                <android.support.v7.widget.RecyclerView
                                    android:id="@+id/recycler_view_banks_convert"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@color/white"
                                    android:overScrollMode="never"/>

                            </LinearLayout>


                        </LinearLayout>

                        <android.support.v4.widget.Space
                            android:layout_width="match_parent"
                            android:layout_height="40dp" />

                    </LinearLayout>

                </android.support.v4.widget.NestedScrollView>

            </com.baoyz.widget.PullRefreshLayout>

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id">
            </com.google.android.gms.ads.AdView>

        </FrameLayout>



    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
